Implement repository pattern, update dbcontext

--- a/Sprout.Exam.WebApp/appsettings.json
+++ b/Sprout.Exam.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SproutExamDb;User Id=sa;Password=8Waystop;"
+    "DefaultConnection": "Server=CTI-IVAN-DEV;Database=SproutExamDb;User Id=sa;Password=sql;"
   },
   "Logging": {
       "LogLevel": {
