--- a/Sprout.Exam.Business/Sprout.Exam.Business.csproj
+++ b/Sprout.Exam.Business/Sprout.Exam.Business.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Sprout.Exam.Common\Sprout.Exam.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Calculation\" />
+  </ItemGroup>
+
 </Project>
