dbupgrade, refactor labels, entity update for salary
-added db upgrade and rollback script to add columns for refactored labels and upcoming salary compute feature
-refactored implementation of some labels
-updated entities, controller and repo for upcoming salary compute feature

--- a/Sprout.Exam.WebApp/Sprout.Exam.WebApp.csproj
+++ b/Sprout.Exam.WebApp/Sprout.Exam.WebApp.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\views\employees\" />
+    <Folder Include="SQLScript\" />
   </ItemGroup>
 
   <ItemGroup>
